Bug 760583 - Null check the selection parameter passed to WillDoAction properly; rs=mconley